# document-renderer

./: .gitignore  CLAUDE_TOOLS.md  README.md  TOOLING.md  install.sh  pyproject.toml
examples/: BOARD_OF_DIRECTORS.md  active_hypotheses.md  sample_report.md
src/document_renderer/: __init__.py  cli.py  compiler.py  latex_renderer.py  markdown_parser.py
templates/: professional_report.tex.j2
tests/: test_cli.py  test_compiler.py  test_latex_renderer.py  test_markdown_parser.py
