[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "document-renderer"
version = "1.0.0"
description = "A minimal deterministic Markdown-to-LaTeX/PDF renderer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Jinja2>=3.1,<4",
  "markdown-it-py>=3.0,<5",
]

[project.scripts]
document-renderer = "document_renderer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
